adds circles
