# app/serializers/circle_serializer.rb
@@ -1,0 +1,8 @@
+# frozen_string_literal: true
+
+class CircleSerializer
+  include JSONAPI::Serializer
+  set_type :circle
+  set_id :id
+  attributes :name, :active
+end
